[gd_scene load_steps=31 format=3 uid="uid://c46vvjqepxr5c"]

[ext_resource type="Script" uid="uid://karntkdpbtuc" path="res://Entities/Actors/NPCs/Garreth/beehave/garreth_alt.gd" id="1_0w5gq"]
[ext_resource type="Texture2D" uid="uid://8uhj6bpw43fi" path="res://Entities/Actors/NPCs/Garreth/Art/garreth.png" id="2_ykyr2"]
[ext_resource type="AnimationLibrary" uid="uid://sue3u4agdpf" path="res://Entities/Actors/actor_anim_library.res" id="3_hjw3h"]
[ext_resource type="Texture2D" uid="uid://l0c4m00kywv" path="res://Entities/Objects/Crop/Art/crops.png" id="3_v3cxx"]
[ext_resource type="Script" uid="uid://bmqjw1xe63sui" path="res://addons/beehave/nodes/beehave_tree.gd" id="4_s0dao"]
[ext_resource type="PackedScene" uid="uid://cshkpaxgeioxd" path="res://Utilities/Interactions/npc_alt_detector.tscn" id="4_t4ib7"]
[ext_resource type="PackedScene" uid="uid://bk10dt7i8uqo6" path="res://Entities/Props/CarryProp/carry_prop.tscn" id="4_vvu4n"]
[ext_resource type="AnimationNodeStateMachine" uid="uid://bluo3agl14ob3" path="res://Entities/Actors/actor_anim_sm.tres" id="4_vx0j5"]
[ext_resource type="Texture2D" uid="uid://bspmyqr5k2fwr" path="res://Entities/Objects/Sword/Art/sword.png" id="5_dt2xc"]
[ext_resource type="Script" uid="uid://cr55e3ervhmig" path="res://addons/beehave/nodes/composites/selector.gd" id="5_x35se"]
[ext_resource type="Script" uid="uid://mtuuxj1jd0m2" path="res://addons/beehave/nodes/composites/sequence.gd" id="6_6gfsl"]
[ext_resource type="Script" uid="uid://cody1kvr17cm1" path="res://Entities/Actors/NPCs/Garreth/beehave/personality.gd" id="7_rs2tg"]
[ext_resource type="Script" uid="uid://bysexhtn0u2vc" path="res://Entities/Actors/NPCs/Garreth/beehave/physiological.gd" id="7_ushby"]
[ext_resource type="PackedScene" uid="uid://b3yvf8qu2yh4k" path="res://Utilities/Game/EmoteController/emote_controller.tscn" id="8_btyao"]
[ext_resource type="Script" uid="uid://ceqhy6041g2kg" path="res://Entities/Actors/NPCs/Garreth/beehave/Is The Agent Idle.gd" id="9_7j1tl"]
[ext_resource type="PackedScene" uid="uid://dt0tf8aaxnjcl" path="res://Utilities/Game/FloatTextController/float_text_controller.tscn" id="9_7sty6"]
[ext_resource type="Script" uid="uid://drvl0ch3ngsy4" path="res://Entities/Actors/NPCs/Garreth/beehave/patrol_action.gd" id="11_8k8tp"]
[ext_resource type="Script" uid="uid://df8gmwihjxif7" path="res://Entities/Actors/NPCs/Garreth/beehave/shout_for_petition.gd" id="11_hcrvy"]
[ext_resource type="Script" uid="uid://bgxm0q2ycclid" path="res://addons/beehave/blackboard.gd" id="12_77cs2"]
[ext_resource type="Script" uid="uid://gwojr7topmnw" path="res://Entities/Actors/NPCs/Garreth/beehave/eat_food.gd" id="15_evk6g"]
[ext_resource type="Script" uid="uid://baxrohffjrq07" path="res://Entities/Actors/NPCs/Garreth/beehave/is_the_food_resource_low.gd" id="17_62b24"]
[ext_resource type="Script" uid="uid://ccocc43ysrl8o" path="res://Entities/Actors/NPCs/Garreth/beehave/chase_agent.gd" id="17_8186l"]
[ext_resource type="Script" uid="uid://2d30pyjtp7c6" path="res://Entities/Actors/NPCs/Garreth/beehave/ask_for_petition.gd" id="18_e4j5f"]
[ext_resource type="Script" uid="uid://otmluk2mhrrq" path="res://Entities/Actors/NPCs/Garreth/beehave/go_to_market.gd" id="18_huo0b"]
[ext_resource type="Script" uid="uid://de0uw4x8bwrbx" path="res://Entities/Actors/NPCs/Garreth/beehave/resume_patrol.gd" id="19_76401"]
[ext_resource type="Script" uid="uid://kwmt5grb7ehy" path="res://Entities/Actors/NPCs/Garreth/beehave/buy_food.gd" id="19_eeoai"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ktkfp"]
size = Vector2(26, 20)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tfsnf"]
radius = 3.0
height = 10.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rsp3p"]
size = Vector2(24, 30)

[sub_resource type="CircleShape2D" id="CircleShape2D_ajai6"]
radius = 44.0

[node name="GarrethAlt" type="CharacterBody2D"]
texture_filter = 1
script = ExtResource("1_0w5gq")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -10)
texture = ExtResource("2_ykyr2")
hframes = 8
vframes = 6
frame = 8

[node name="SeedProp" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -21)
texture = ExtResource("3_v3cxx")
hframes = 6
vframes = 2
frame = 6
metadata/_edit_lock_ = true

[node name="HarvestProp" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, -3)
scale = Vector2(0.8, 0.8)
texture = ExtResource("3_v3cxx")
hframes = 6
vframes = 2
frame = 11
metadata/_edit_lock_ = true

[node name="EatProp" type="Node2D" parent="."]
visible = false
texture_filter = 1
position = Vector2(0, -5)
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="EatProp"]
position = Vector2(9, 0)
texture = ExtResource("3_v3cxx")
hframes = 6
vframes = 2
frame = 11
metadata/_edit_lock_ = true

[node name="CarryProp" parent="." instance=ExtResource("4_vvu4n")]
visible = false

[node name="Weapon" type="Area2D" parent="."]
visible = false
metadata/_edit_group_ = true
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="Weapon"]
position = Vector2(16, 0)
rotation = 1.5708
texture = ExtResource("5_dt2xc")
hframes = 4
vframes = 3
frame = 4
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Weapon"]
position = Vector2(13, -6)
shape = SubResource("RectangleShape2D_ktkfp")
disabled = true
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_tfsnf")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": ExtResource("3_hjw3h")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = ExtResource("4_vx0j5")
anim_player = NodePath("../AnimationPlayer")
parameters/Attack/blend_position = 0
parameters/Eat/blend_position = 0
parameters/Harvest/blend_position = 0
parameters/Idle/blend_position = 0
parameters/Move/blend_position = 0

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
avoidance_enabled = true
debug_enabled = true

[node name="RearMarker" type="Node2D" parent="."]
rotation = 3.14159

[node name="Marker2D" type="Marker2D" parent="RearMarker"]
position = Vector2(-10, -2.53518e-05)

[node name="PetitionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PetitionArea"]
position = Vector2(0, -6)
shape = SubResource("RectangleShape2D_rsp3p")

[node name="NpcAltDetector" parent="." instance=ExtResource("4_t4ib7")]
NPCName = "Garreth"

[node name="CollisionShape2D" type="CollisionShape2D" parent="NpcAltDetector"]
shape = SubResource("CircleShape2D_ajai6")

[node name="Blackboard" type="Node" parent="."]
script = ExtResource("12_77cs2")
blackboard = {
"agent_arrived": false,
"current_state": "idle",
"food_inventory": 10,
"is_full": 100,
"last_patrol_location": Vector2(672, 384),
"money": 100
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HungerTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="Physiological" type="Node" parent="."]
script = ExtResource("7_ushby")

[node name="Personality" type="Node" parent="."]
script = ExtResource("7_rs2tg")

[node name="EmoteController" parent="." instance=ExtResource("8_btyao")]

[node name="FloatTextController" parent="." instance=ExtResource("9_7sty6")]

[node name="GarrethBehaviour" type="Node" parent="." node_paths=PackedStringArray("blackboard", "actor")]
script = ExtResource("4_s0dao")
blackboard = NodePath("../Blackboard")
actor = NodePath("..")

[node name="SelectorComposite" type="Node" parent="GarrethBehaviour"]
script = ExtResource("5_x35se")

[node name="Resume Patrol" type="Node" parent="GarrethBehaviour/SelectorComposite"]
script = ExtResource("19_76401")

[node name="Eat Food" type="Node" parent="GarrethBehaviour/SelectorComposite"]
script = ExtResource("15_evk6g")

[node name="Buy Food" type="Node" parent="GarrethBehaviour/SelectorComposite"]
script = ExtResource("6_6gfsl")

[node name="Is The Food Resource Low" type="Node" parent="GarrethBehaviour/SelectorComposite/Buy Food"]
script = ExtResource("17_62b24")

[node name="Go To Market" type="Node" parent="GarrethBehaviour/SelectorComposite/Buy Food"]
script = ExtResource("18_huo0b")

[node name="Buy Food" type="Node" parent="GarrethBehaviour/SelectorComposite/Buy Food"]
script = ExtResource("19_eeoai")

[node name="Patrol" type="Node" parent="GarrethBehaviour/SelectorComposite"]
script = ExtResource("6_6gfsl")

[node name="Is The Agent Idle" type="Node" parent="GarrethBehaviour/SelectorComposite/Patrol"]
script = ExtResource("9_7j1tl")

[node name="Shout For Petition" type="Node" parent="GarrethBehaviour/SelectorComposite/Patrol"]
script = ExtResource("11_hcrvy")

[node name="Patrol Action" type="Node" parent="GarrethBehaviour/SelectorComposite/Patrol"]
script = ExtResource("11_8k8tp")

[node name="Petitioning" type="Node" parent="GarrethBehaviour/SelectorComposite"]
script = ExtResource("6_6gfsl")

[node name="Chase Agent" type="Node" parent="GarrethBehaviour/SelectorComposite/Petitioning"]
script = ExtResource("17_8186l")

[node name="Ask For Petition" type="Node" parent="GarrethBehaviour/SelectorComposite/Petitioning"]
script = ExtResource("18_e4j5f")

[connection signal="animation_finished" from="AnimationTree" to="GarrethBehaviour/SelectorComposite/Eat Food" method="_on_animation_tree_animation_finished"]
[connection signal="velocity_computed" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_velocity_computed"]
[connection signal="body_entered" from="PetitionArea" to="GarrethBehaviour/SelectorComposite/Petitioning/Chase Agent" method="_on_petition_area_body_entered"]
[connection signal="body_entered" from="NpcAltDetector" to="Personality" method="_on_npc_alt_detector_body_entered"]
[connection signal="timeout" from="Timer" to="GarrethBehaviour/SelectorComposite/Patrol/Shout For Petition" method="_on_timer_timeout"]
[connection signal="timeout" from="HungerTimer" to="Physiological" method="hunger_decay_timeout"]
[connection signal="move_actor" from="GarrethBehaviour/SelectorComposite/Resume Patrol" to="." method="move_actor"]
[connection signal="move_actor" from="GarrethBehaviour/SelectorComposite/Buy Food/Go To Market" to="." method="move_actor"]
[connection signal="move_actor" from="GarrethBehaviour/SelectorComposite/Patrol/Patrol Action" to="." method="move_actor"]
[connection signal="move_actor" from="GarrethBehaviour/SelectorComposite/Petitioning/Chase Agent" to="." method="move_actor"]

[editable path="CarryProp"]
